--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,20 @@ body{
     margin: 0;
     padding: 0;
 }
+#cabecera{
+    background: darkblue;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+
+
+}
+#cabecera #tagline{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container{
     width: 70%;
     padding: 1em;
