--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: rgb(0, 0, 0);
     text-align: center;
-    font-family: 'Courier New';
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     margin: 0;
     padding: 0;
