--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@ body{
     padding: 0;
 }
 #cabecera{
-    background: darkblue;
+    background: rgb(0, 139, 42);
     box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
     color: white;
     margin: 0;
