--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,6 @@
-body{
+body
+{
+    background: rgb(35, 35, 36);
     color: rgb(80, 80, 80);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,16 +9,19 @@ body{
     padding: 0;
 }
 #cabecera{
-    background: rgb(19, 109, 101);
+    background: rgb(65, 66, 66);
     box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
     color: white;
+    font-weight: bold;
     margin: 0;
     padding: 0.5em;
-
-
+}
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline{
-    padding: 1em 0 0 0;
+    padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
@@ -29,4 +34,9 @@ body{
 }
 #container h1{
     font-size: 20px;
+}
+#post
+{
+background: white;
+padding: 1em;
 }
